--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "ai-app",
-  "version": "1.0.0",
   "type": "module",
-  "main": "api.js",
   "scripts": {
-    "start": "node api.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2"
