--- a/package.json
+++ b/package.json
@@ -1,9 +1,24 @@
 {
-  "type": "module",
+  "name": "otp-railway-server",
+  "version": "3.0.0",
+  "description": "Server OTP untuk kirim ke 13 layanan sekaligus",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
-  }
+    "express": "^4.18.2",
+    "node-fetch": "^2.7.0"
+  },
+  "engines": {
+    "node": "18.x"
+  },
+  "keywords": [
+    "otp",
+    "spam",
+    "telegram",
+    "railway"
+  ],
+  "author": "Yanshs",
+  "license": "MIT"
 }
